# appianAdmin

./: .gitignore  Application.hs  Foundation.hs  Model.hs  TailFile.hs  appianAdmin.cabal  package.sh  stack.yaml
Handler/: AppianLog.hs  ClearLog.hs  Home.hs  NavPos.hs  Plugins.hs
app/: devel.hs
config/: keter.yml  models  routes  settings.yml  sqlite.yml  test-settings.yml
static/css/: bootstrap.css
templates/: default-layout-wrapper.hamlet  default-layout.hamlet  default-layout.julius  homepage.hamlet  homepage.julius  logfile.hamlet  logfile.julius  plugins.hamlet  plugins.julius
